<resources>
    <string name="app_name">Hey su Manage</string>
    <string name="refresh">Yenilə</string>
    <string name="trx_no">Sənəd No</string>
    <string name="trx_date">Sənəd tarixi</string>
    <string name="bp_code">Müştəri kodu</string>
    <string name="bp_name">Müştəri adı</string>
    <string name="sbe_code">Təmsilçi kodu</string>
    <string name="sbe_name">Təmsilçi adı</string>
    <string name="quantity">Say</string>
    <string name="limit">Limit</string>
    <string name="limit_remained">Qalıq limit</string>
    <string name="valid_days">Müddət (gün)</string>
    <string name="parameters">Parametrlər</string>
    <string name="update">Versiyanı yenilə</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="order_quantity">Sifariş sayı</string>
    <string name="error">Xəta</string>
    <string name="valid_days_remained">Qalan müddət (gün)</string>
    <string name="info">Info</string>
    <string name="rec_status">Sənəd statusu</string>
    <string name="pick_status">Yığım statusu</string>
    <string name="no_new_version">Yeni versiya yoxdur</string>
    <string name="error_occurred">Xəta baş verdi!</string>
    <string name="orders">Sifarişlər</string>
    <string name="bp_inv_sum">Müştəri-mal qalığı</string>
    <string name="inv_code">Mal kodu</string>
    <string name="inv_name">Mal adı</string>
    <string name="sale">Satış</string>
    <string name="brand_code">Brend</string>
    <string name="main_whs_qty">Əsas anbar</string>
    <string name="search">Axtar</string>
    <string name="start_date">İlk tarix</string>
    <string name="end_date">Son tarix</string>
    <string name="check_parameters">Məlumat yüklənə bilmədi. Parametrlərin düzgünlüyünü yoxlayın.</string>
    <string name="connection_problem">Bağlantı problemi</string>
    <string name="t20_whs_qty">Mingəçevir anbarı</string>
    <string name="price_lst">Alış qiyməti</string>
    <string name="price_std">Baza qiyməti</string>
    <string name="price_p01">Pərakəndə qiymət</string>
    <string name="internal_error">Daxili xəta</string>
    <string name="t29_whs_qty">Lənkəran anbarı</string>
    <string name="update_version">Proqram versiyasını yenilə</string>
    <string name="want_to_update">Versiyanı yeniləmək istəyirsinizmi?</string>
    <string name="yes">Bəli</string>
    <string name="no">Xeyr</string>
    <string name="price_vp4">Mağaza qiyməti</string>
    <string name="main_rzv_qty">Əsas anbar (Rezerv)</string>
    <string name="t20_rzv_qty">Mingəçevir anbarı (Rezerv)</string>
    <string name="t29_rzv_qty">Lənkəran anbarı (Rezerv)</string>
    <string name="stock">Anbar</string>
    <string name="whs_qty">Fiziki qalıq</string>
    <string name="rzv_qty">Rezerv</string>
    <string name="qty_at_client">Müştəridəki say</string>
    <string name="qty">Miqdar</string>
    <string name="send">Göndər</string>
    <string name="not_defined"><![CDATA[<Təyin edilməyib>]]></string>
    <string name="user_label">İstifadəçi</string>
    <string name="sale_credit_memo">Satış kredit memo</string>
    <string name="user_id">İstifadəçi kodu</string>
    <string name="password">Şifrə</string>
    <string name="warning">Xəbərdarlıq</string>
    <string name="not_allowed">Səlahiyyətiniz yoxdur!</string>
    <string name="username_or_password_not_entered">İstifadəçi kodu və ya şifrə daxil edilməyib.</string>
    <string name="enter">Daxil ol</string>
    <string name="enter_qty">Say daxil edin</string>
    <string name="ok">OK</string>
    <string name="qty_to_return">Qaytarılan say</string>
    <string name="device_id">Cihaz ID-si</string>
    <string name="phone">Telefon</string>
    <string name="address">Ünvan</string>
    <string name="invoices">Qaimələr</string>
    <string name="sbe">Təmsilçi</string>
    <string name="clear_logs">Loqları sil</string>
    <string name="share">Paylaş</string>
    <string name="logs">Loqlar</string>
    <string name="max_discount_ratio">Maks. endirim faizi</string>
</resources>