<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ExchangeInfoActivity">

    <Button
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refresh">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:id="@+id/exchange_info_data_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#9ED2D8D8">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/bp_code"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/bp_name"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/sbe" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/inv_name"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/inv_code"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/limit"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="@string/limit"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/qty_at_client"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="@string/qty_at_client"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/limit_remained"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="@string/limit_remained"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/valid_days"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="@string/valid_days"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/valid_days_remained"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="@string/valid_days_remained"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/phone"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/address"
                    android:textColor="@color/black" />

            </TableRow>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/data_list"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingBottom="70dp" />
        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>