<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SaleCreditMemoActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/send"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_upload" />


        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/not_defined"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/returnable_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info" />

        <Spinner
            android:id="@+id/whs_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/returnable_qty" />

        <Spinner
            android:id="@+id/sbe_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/whs_list" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <HorizontalScrollView
        android:id="@+id/trx_list_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/user_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_panel"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#D9FBFA"
                android:padding="3dp">

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:foreground="@android:color/black" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/trx_no"
                    android:textSize="18sp" />

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:foreground="@android:color/black" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/trx_date"
                    android:textSize="18sp" />

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:foreground="@android:color/black" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:gravity="end"
                    android:text="@string/qty"
                    android:textSize="18sp" />

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:foreground="@android:color/black" />
            </TableRow>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trx_list_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="180dp" />
        </LinearLayout>
    </HorizontalScrollView>

    <include
        layout="@layout/footer_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trx_list_scroll" />

</androidx.constraintlayout.widget.ConstraintLayout>